--- a/server/model-config.json
+++ b/server/model-config.json
@@ -34,7 +34,7 @@
     "dataSource": "mongo-db",
     "public": true,
     "options": {
-      "emailVerificationRequired": false
+      "emailVerificationRequired": true
     }
   }
 }
